[package]
name = "axum-cookie"
version = "0.1.0-alpha"
edition = "2021"
description = "Cookie extractor middleware for axum"
license = "MIT"
readme = "./README.md"

[dependencies]
axum-core = "0.5"
cookie-rs = "0.2"
http = "1.2"
tower-layer = "0.3"
tower-service = "0.3"

[dev-dependencies]
tokio = { version = "1.43", features = ["macros"] }
tower = "0.5"
