[package]
name = "axum-cookie"
version = "0.1.0"
edition = "2021"
description = "Cookie extractor middleware for axum"
license = "MIT"
readme = "./README.md"

[dependencies]
axum-core = "0.5"
cookie-rs = "0.2"
http = "1"
tower-layer = "0.3"
tower-service = "0.3"

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt"] }
tower = "0.5"
