[package]
name = "axum-cookie"
version = "0.2.2"
edition = "2021"
description = "Cookie extractor middleware for axum"
license = "MIT"
keywords = ["cookie", "http", "web", "axum", "middleware"]
repository = "https://github.com/magwoo/axum-cookie"
readme = "./README.md"

[dependencies]
axum-core = "0.5"
cookie-rs = "0.4"
http = "1"
tower-layer = "0.3"
tower-service = "0.3"

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt"] }
tower = "0.5"
